[gd_scene load_steps=7 format=3 uid="uid://cu70i2qnxxe7t"]

[ext_resource type="Texture2D" uid="uid://4kwycdn6gf6p" path="res://Assets/valerie.jpg" id="1_123ck"]
[ext_resource type="Script" path="res://Scripts/Character_creator/char_precreator.gd" id="1_sumcf"]
[ext_resource type="PackedScene" uid="uid://c51h4einlnntx" path="res://Scenes/Entity/Character_creator.tscn" id="2_c8brx"]
[ext_resource type="Theme" uid="uid://b7rhot7w5e43n" path="res://Themes/Button_font_t1.tres" id="2_yfnrf"]
[ext_resource type="PackedScene" uid="uid://dhi3bkwihelg1" path="res://Scenes/Entity/Character_loader.tscn" id="3_uynmp"]
[ext_resource type="Script" path="res://Scripts/Input.gd" id="5_hd07k"]

[node name="char_precreator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sumcf")
character_creator = ExtResource("2_c8brx")
character_loader = ExtResource("3_uynmp")

[node name="BCG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_123ck")
expand_mode = 1
script = ExtResource("5_hd07k")

[node name="Creator_button" type="Button" parent="."]
layout_mode = 0
offset_left = 1177.0
offset_top = 192.0
offset_right = 1694.0
offset_bottom = 430.0
theme = ExtResource("2_yfnrf")
text = "Character creator"

[node name="Loader_button" type="Button" parent="."]
layout_mode = 0
offset_left = 1177.0
offset_top = 534.0
offset_right = 1694.0
offset_bottom = 772.0
theme = ExtResource("2_yfnrf")
text = "Character loader"

[node name="Exit_button" type="Button" parent="."]
layout_mode = 0
offset_left = 1694.0
offset_top = 927.0
offset_right = 1910.0
offset_bottom = 1069.0
theme = ExtResource("2_yfnrf")
text = "Exit"

[node name="UI_Layer" type="CanvasLayer" parent="."]

[connection signal="pressed" from="Creator_button" to="." method="_on_creator_button_pressed"]
[connection signal="pressed" from="Loader_button" to="." method="_on_loader_button_pressed"]
[connection signal="pressed" from="Exit_button" to="." method="_on_exit_button_pressed"]
